--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,3 @@
 include:
   - project: $INCLUDE_PROJECT
-    file: '/templates/gitlab/default/deploy.yaml'
+    file: '/templates/gitlab/default/deploy.yml'
